# neutts

./: CMakeLists.txt  README.md  agent.py  pyproject.toml  server.py  stream_audio.py
.github/workflows/: publish.yaml
examples/: README.md  basic_example.py  basic_example_emotions.py  basic_streaming_example.py  basic_streaming_example_emotions.py
neutts/: __init__.py  neutts.py  neutts_2e.py  phonemizers.py  preprocessing.py
samples/: emily.pt  emily.txt  najdi_ref_2.pt  paul.pt  paul.txt  sophie.pt  sophie.txt  steven.pt  steven.txt
samples/arabic/: najdi_ref_2.txt  najdi_ref_3.txt  transcripts.json
samples/chinese/: mei.pt  mei.txt
samples/english/: paul.pt  paul.txt
samples/french/: amelie.pt  amelie.txt
samples/german/: carla.pt  carla.txt
samples/japanese/: miwa.pt  miwa.txt
samples/korean/: siwoo.pt  siwoo.txt
samples/portuguese/: diogo.pt  diogo.txt
samples/spanish/: martina.pt  martina.txt
samples/urdu/: jess.pt  jess.txt
tests/: test_neutts.py  test_neutts_2e.py
