[build-system]
requires = ["scikit-build-core>=0.9"]
build-backend = "scikit_build_core.build"

[project]
name = "neutts"
version = "1.3.0"
authors = [
  { name="neuphonic", email="general@neuphonic.com" },
]
description = "NeuTTS - a package for text-to-speech generation using Neuphonic's TTS models."
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "librosa==0.11.0",
    "neucodec>=0.0.4",
    "numpy>=2.2.6",
    "phonemizer>=3.0.0",
    "resemble-perth==1.0.1",
    "soundfile==0.13.1",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "transformers==5.1.0",
]

# Defining optional installations
[project.optional-dependencies]
llama = ["llama-cpp-python", "gguf"]
onnx = ["onnxruntime"]
all = ["llama-cpp-python", "gguf", "onnxruntime"]

[tool.scikit-build]
# Include the espeak-ng-data directory that cmake copies into the package
wheel.packages = ["neutts", "neuttsair"]
